// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test for GlobalButton component Type lock renders correctly: send-button 1`] = `
<div>
  <div>
    <button
      class="global-button"
    >
      <div
        class="global-button-content"
      >
        <div
          class="global-button-icon"
        >
          <svg />
        </div>
        <div
          class="global-button-label"
        >
          Lock Koi Wallet
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Test for GlobalButton component Type send renders correctly: send-button 1`] = `
<div>
  <div>
    <button
      class="global-button"
    >
      <div
        class="global-button-content"
      >
        <div
          class="global-button-icon"
        >
          <svg />
        </div>
        <div
          class="global-button-label"
        >
          Send KOI
        </div>
      </div>
    </button>
  </div>
</div>
`;
